apps/istio-addons/jaeger/jaeger-vs.yml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: jaeger-vs
  namespace: istio-system
spec:
  hosts:
    - "mylocallab.local"
  gateways:
    - argocd/generic-gateway
  http:
    - match:
        - uri:
            prefix: /jaeger
      route:
        - destination:
            host: tracing
            port:
              number: 80
